Moving part of access expanders from accesswidener to mixin and fix Velocity with Normal mode